Fix WebGL problem with SkiaRenderer + SkDDL + OOPR

WebGL may use GL_RGB texture, and choose viz::RGBA_8888 as resource
format. So to make WebGL work, we should not consider it an invalid
combination.

Bug: 901822
Change-Id: I4b6678492b2fb847d66de3fe8ec7b0049ca8eaff
Reviewed-on: https://chromium-review.googlesource.com/c/1318076
Reviewed-by: Jonathan Backer <backer@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Peng Huang <penghuang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605749}
Former-commit-id: 9ddf2d5046da2218aedb2cf69e76e0e5a584fd7c