components/viz/common/resources/resource_format_utils.cc
@@ -35,13 +35,14 @@ SkColorType ResourceFormatToClosestSkColorType(bool gpu_compositing,
       return kRGB_565_SkColorType;
     case LUMINANCE_8:
       return kGray_8_SkColorType;
+    case RGBX_8888:
+      return kRGB_888x_SkColorType;
     case ETC1:
     case RED_8:
     case LUMINANCE_F16:
     case R16_EXT:
     case BGR_565:
     case RG_88:
-    case RGBX_8888:
     case BGRX_8888:
     case RGBX_1010102:
     case BGRX_1010102:
@@ -272,7 +273,7 @@ unsigned int TextureStorageFormat(ResourceFormat format) {
     case R16_EXT:
       return GL_R16_EXT;
     case RGBX_8888:
-      return GL_RGB;
+      return GL_RGB8_OES;
     case RGBX_1010102:
       return GL_RGB10_A2_EXT;
     case BGR_565:
